force-app/main/default/objects/Opportunity_Order__c/Opportunity_Order__c.object-meta.xml
<CustomObject>
    <label>Opportunity Order</label>
    <nameField>
        <displayFormat>Order-{0000}</displayFormat>
        <label>Opportunity Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>