force-app/main/default/objects/Opportunity_Order__c/fields/Connected_Devices__c.field-meta.xml
<CustomField>
    <fullName>Connected_Devices__c</fullName>
    <label>Connected Devices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>