force-app/main/default/objects/Opportunity_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Krishna</fullName>
            </value>
            <value>
                <fullName>Ravi</fullName>
            </value>
            <value>
                <fullName>Mani</fullName>
            </value>
            <value>
                <fullName>Anil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>