force-app/main/default/objects/Opportunity_Order__c/fields/Customer_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Country__c</fullName>
    <label>Customer Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>