force-app/main/default/objects/Opportunity_Order__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seshu</fullName>
            </value>
            <value>
                <fullName>Bhargav</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>