force-app/main/default/objects/Opportunity_Order__c/fields/Customer_PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Amount__c</fullName>
    <label>Customer PO Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>