force-app/main/default/objects/Opportunity_Order__c/fields/Customer_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Date__c</fullName>
    <label>Customer PO Date</label>
    <type>Date</type>
</CustomField>