force-app/main/default/objects/Opportunity_Order__c/fields/LCO__c.field-meta.xml
<CustomField>
    <fullName>LCO__c</fullName>
    <label>LCO</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>