force-app/main/default/objects/Opportunity_Order__c/fields/No_of_users__c.field-meta.xml
<CustomField>
    <fullName>No_of_users__c</fullName>
    <label>No of users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>