force-app/main/default/objects/Opportunity_Order__c/fields/Number_of_Asset__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Asset__c</fullName>
    <label>Number of Asset</label>
    <length>25</length>
    <type>Text</type>
</CustomField>