force-app/main/default/objects/Opportunity_Order__c/fields/Opportunity_Track__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Track</label>
    <referenceTo>Opportunity_Track__c</referenceTo>
    <relationshipLabel>Opportunity Orders</relationshipLabel>
    <relationshipName>Opportunity_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>