force-app/main/default/objects/Opportunity_Order__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMU</fullName>
            </value>
            <value>
                <fullName>RHQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>