force-app/main/default/objects/Opportunity_Order__c/fields/Other_Project_Information_Number_of_Sus__c.field-meta.xml
<CustomField>
    <fullName>Other_Project_Information_Number_of_Sus__c</fullName>
    <label>Other Project Information (Number of Sus</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>