force-app/main/default/objects/Opportunity_Order__c/fields/PaaS_Subscription_Condition__c.field-meta.xml
<CustomField>
    <fullName>PaaS_Subscription_Condition__c</fullName>
    <label>PaaS Subscription Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Renewal</fullName>
            </value>
            <value>
                <fullName>Non Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>