force-app/main/default/objects/Opportunity_Order__c/fields/Project_PO_number__c.field-meta.xml
<CustomField>
    <fullName>Project_PO_number__c</fullName>
    <label>Project PO number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>