force-app/main/default/objects/Opportunity_Order__c/fields/Proposal_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Ref_No__c</fullName>
    <label>Proposal Ref No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>