force-app/main/default/objects/Opportunity_Order__c/fields/Region_region__c.field-meta.xml
<CustomField>
    <fullName>Region_region__c</fullName>
    <label>Region(region)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YLQ</fullName>
            </value>
            <value>
                <fullName>YLM</fullName>
            </value>
            <value>
                <fullName>YCP</fullName>
            </value>
            <value>
                <fullName>YLW</fullName>
            </value>
            <value>
                <fullName>RHQ Testing Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>