force-app/main/default/objects/Opportunity_Order__c/fields/SaaS_Annual_Fee_To_DXP__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Annual_Fee_To_DXP__c</fullName>
    <label>SaaS Annual Fee To DXP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>