force-app/main/default/objects/Opportunity_Order__c/fields/SaaS_Order_Size__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Order_Size__c</fullName>
    <label>SaaS Order Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>