force-app/main/default/objects/Opportunity_Order__c/fields/SaaS_Order_Size_RHQ__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Order_Size_RHQ__c</fullName>
    <label>SaaS Order Size (RHQ)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>