force-app/main/default/objects/Opportunity_Order__c/fields/SaaS_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Payment_Term__c</fullName>
    <label>SaaS Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>