force-app/main/default/objects/Opportunity_Order__c/fields/SaaS_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>SaaS_PO_Number__c</fullName>
    <label>SaaS PO Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>