force-app/main/default/objects/Opportunity_Order__c/fields/SaaS_Service_Term_Duration__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Service_Term_Duration__c</fullName>
    <label>SaaS Service Term Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>4 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>