force-app/main/default/objects/Opportunity_Order__c/fields/SaaS_Solution_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Solution_Owner_Division__c</fullName>
    <label>SaaS Solution Owner Division</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMU YRB</fullName>
            </value>
            <value>
                <fullName>CMU YCL</fullName>
            </value>
            <value>
                <fullName>KBC</fullName>
            </value>
            <value>
                <fullName>1111</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>