force-app/main/default/objects/Opportunity_Order__c/fields/SaaS_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Subscriber__c</fullName>
    <label>SaaS Subscriber</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>f21</fullName>
            </value>
            <value>
                <fullName>cmu own er</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>