force-app/main/default/objects/Opportunity_Order__c/fields/YGS_GBPM_SAP_customer_Id__c.field-meta.xml
<CustomField>
    <fullName>YGS_GBPM_SAP_customer_Id__c</fullName>
    <label>YGS GBPM (SAP) customer Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>